# rpi_osx

./: CMakeLists.txt  Makefile  Readme.md
src/: main.cpp
util/: CrossCompile.cmake  pkg-config-custom
